@@ -928,3 +928,6 @@ further research is needed
 **** =22:55= very disappointingly [[revit link display settings are not available via api][https://forums.autodesk.com/t5/revit-ideas/api-for-rvt-link-display-settings/idc-p/13624379]]
 this makes working with revit links very difficult
 for example changing "by linked view" setting across floors
+*** 16
+**** =09:47= still can't get DrawRevisionCloudAroundSelectedElements to work
+can't understand why transformation from "view-space" to "sheet-space" doesn't work
